removed placeholders from html and highligted the static elements for redavility with developing

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <header>
+    <header style="background-color: green;">
         <h1>Vet Management App</h1>
     </header>
-    <nav id="side-nav-bar">
+    <nav id="side-nav-bar" style="background-color: green;">
         <ul>
             <li><a href="/vets">Vets</a></li>
             <li><a href="/animals">Animals</a></li>
@@ -24,7 +24,7 @@
         {% endblock %}
     </main>
 
-    <footer>
+    <footer style="background-color: green;">
         &copy; Juan Molero 2022
     </footer>
 </body>
