--- a/templates/vets/vets.html
+++ b/templates/vets/vets.html
@@ -2,16 +2,13 @@
 {% block content %}
 
 <section>
-    {% for vet in all_vets %}
-    <article>
-        <h2 class="vet-name">{{ vet.name }}</h2>
-        <h3>Patients</h3>
-        <ul>
-            <li>animal name placeholder</li>
-            <li>animal name placeholder</li>
-        </ul>
-    </article>
-    {% endfor %}
+    <ul>
+        {% for vet in all_vets %}
+        <li>
+            <a href="/vets/{{ vet.id }}">{{ vet.name }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </section>
 
 {% endblock %}
