--- a/templates/vets/vet.html
+++ b/templates/vets/vet.html
@@ -10,6 +10,15 @@
     </ul>
 </article>
 <br>
-<a href="/vets">Back</a>
+<nav>
+    <a href="/vets">Back</a>
+    <a href="/vets/{{vet.id }}">Edit</a>
+    <br>
+    <form action="/vets/{{ vet.id }}/delete" method="POST">
+        <input type="submit" value="Delete">
+    </form> 
+    </ul>
+
+</nav>
 
 {% endblock %}
