--- a/templates/vets/vet.html
+++ b/templates/vets/vet.html
@@ -12,7 +12,7 @@
 <br>
 <nav>
     <a href="/vets">Back</a>
-    <a href="/vets/{{vet.id }}">Edit</a>
+    <a href="/vets/{{vet.id }}/edit">Edit</a>
     <br>
     <form action="/vets/{{ vet.id }}/delete" method="POST">
         <input type="submit" value="Delete">
