--- a/templates/owners/owner.html
+++ b/templates/owners/owner.html
@@ -3,6 +3,7 @@
 
 <article>
     <h2>{{ owner.name }}</h2>
+    <h4>Contact Details: {{ owner.contact_details }}</h4>
     <h3>Animals:</h3>
     <ul>
         <li>Placeholder animal name</li>
@@ -11,8 +12,15 @@
     </ul>
 </article>
 <br>
-<a href="/owners">Back</a>
+<nav>
+    <a href="/owners">Back</a>
+    <a href="/owners/{{ owner.id }}/edit">Edit</a>
+    <br>
+    <form action="/owners/{{ owner.id }}/delete" method="POST">
+        <input type="submit" value="Delete">
+    </form> 
+    </ul>
+
+</nav>
 
 {% endblock %}
-
-
