--- a/templates/owners/owner.html
+++ b/templates/owners/owner.html
@@ -6,9 +6,9 @@
     <h4>Contact Details: {{ owner.contact_details }}</h4>
     <h3>Animals:</h3>
     <ul>
-        <li>Placeholder animal name</li>
-        <li>Placeholder animal name</li>
-        <li>Placeholder animal name</li>
+        {% for animal in animals %}
+        <li><a href="/animals/{{ animal.id }}">{{ animal.name }}</a></li>
+        {% endfor %}
     </ul>
 </article>
 <br>
