--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <header style="background-color: green;">
+    <header>
         <h1>Vet Management App</h1>
+        <nav id="side-nav-bar" >
+            <ul id="nav-list">
+                <li><a href="/vets">Vets</a></li>
+                <li><a href="/owners">Owners</a></li>
+                <li><a href="/animals">Animals</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav id="side-nav-bar" style="background-color: green;">
-        <ul>
-            <li><a href="/vets">Vets</a></li>
-            <li><a href="/animals">Animals</a></li>
-            <li><a href="/owners">Owners</a></li>
-        </ul>
-    </nav>
-
-    <main>
         {% block content %}
         {% endblock %}
-    </main>
-
-    <footer style="background-color: green;">
-        &copy; Juan Molero 2022
+    <footer>
+        <h1>
+            &copy; Juan Molero 2022
+        </h1>
     </footer>
 </body>
 </html>
