--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -27,8 +27,8 @@ body > header {
 /* Main content */
 
 
-/* content card  */
-.content-card {
+/* cards  */
+.card {
     width: 50%;
     margin:auto;
     margin-top: 20px;
@@ -37,23 +37,79 @@ body > header {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+
     
 }
 
-.content-card > h1 {
+.card > h1 {
+    width: 100%;
     background-color: purple;
     color: white;
     text-align: center;
+    margin: 0;
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 2rem; 
+    font-size: 40px; 
 }
 
-.content-card > ul > li {
-    font-size: 1.3rem;
-    padding: 6px;
+.card-content {
+    text-align: center;
 }
 
+.card-content > h1 {
+    font-size: 28px;
+}
+
+.card-content > h2 {
+    font-size: 22px;
+}
+
+.card-content > ul {
+    padding-left: 0;
+    padding-bottom: 10px;
+}
+
+.card-content > ul > li {
+    font-size: 18px;
+    list-style: none;
+    text-align: center;
+}
+
+.card-nav {
+    display: flex;
+}
+
+.card-nav > form {
+    padding: 3px
+}
+
+
+/* forms */
+
+.edit-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-form-element {
+    padding: 5px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.edit-form > label {
+    padding: 10px;
+    font-size: 20px;
+}
+
+.edit-form > .link-button {
+    width: 60%;
+    margin: auto;
+}
 
 /* misc */
 .link-button {
