--- a/templates/vets/vet.html
+++ b/templates/vets/vet.html
@@ -1,24 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-<article>
-    <h2>{{ vet.name }}</h2>
-    <h3>Patients:</h3>
-    <ul>
-        {% for animal in animals %}
-        <li><a href="/animals/{{ animal.id }}">{{animal.name}}</a></li>
-        {% endfor %}
-    </ul>
-</article>
-<br>
-<nav>
-    <a href="/vets">Back</a>
-    <a href="/vets/{{vet.id }}/edit">Edit</a>
-    <br>
-    <form action="/vets/{{ vet.id }}/delete" method="POST">
-        <input type="submit" value="Delete">
-    </form> 
-    </ul>
-
-</nav>
-
+<main>
+    <section class="card">
+        <h1>Team of vets</h1>
+        <section class="card-content">
+            <h1>{{ vet.name }}</h1>
+            <h2>Patients:</h2>
+            <ul>
+                {% for animal in animals %}
+                <li><a href="/animals/{{ animal.id }}">{{animal.name}}</a></li>
+                {% endfor %}
+            </ul>
+        </section>
+        <nav class="card-nav">
+            <form action="/vets/{{vet.id }}/edit">
+                <input type="submit" value="Edit" class="link-button">
+            </form>
+            <form action="/vets/{{ vet.id }}/delete" method="POST">
+                <input type="submit" value="Delete" class="link-button">
+            </form>
+        </nav>
+    </section>
+</main>
 {% endblock %}
