--- a/templates/owners/owner.html
+++ b/templates/owners/owner.html
@@ -1,26 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<article>
-    <h2>{{ owner.name }}</h2>
-    <h4>Contact Details: {{ owner.contact_details }}</h4>
-    <h3>Animals:</h3>
-    <ul>
-        {% for animal in animals %}
-        <li><a href="/animals/{{ animal.id }}">{{ animal.name }}</a></li>
-        {% endfor %}
-    </ul>
-</article>
-<br>
-<nav>
-    <a href="/owners">Back</a>
-    <a href="/owners/{{ owner.id }}/edit">Edit</a>
-    <br>
-    <form action="/owners/{{ owner.id }}/delete" method="POST">
-        <input type="submit" value="Delete">
-    </form> 
-    </ul>
-
-</nav>
-
+<main>
+    <section class="card">
+        <h1>Owners</h1>
+        <section class="card-content">
+            <h1>{{ owner.name }}</h1>
+            <h2>Contact: {{ owner.contact_details }}</h1>
+                <h2>Animals: </h2>
+                <ul>
+                    {% for animal in animals %}
+                    <li><a href="/animals/{{ animal.id }}">{{ animal.name }}</a></li>
+                    {% endfor %}
+                </ul>
+        </section>
+        <nav class="card-nav">
+            <form action="/owners/{{ owner.id }}/edit">
+                <input type="submit" value="Edit" class="link-button">
+            </form>
+            <form action="/owners/{{ owner.id }}/delete" method="POST">
+                <input type="submit" value="Delete" class="link-button">
+            </form>
+        </nav>
+    </section>
+</main>
 {% endblock %}
