--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -1,5 +1,32 @@
 {% extends 'base.html' %}
 {% block content %}
+<main>
+    <section class="card">
+        <h1>Edit Owner</h1>
+        <section class="card-content">
+            <form action="/owners/{{ owner.id }}" method="POST" id="owner-form" class="new-edit-form">
+
+                    <label for="owner-name"> Name</label>
+                    <input type="text" name='name' id="vet-name" value="{{ owner.name }}" class="new-edit-form-element">
+                    <label for="owner-contacts">Contact Details</label>
+                    <input type="text" name="contact-details" id="owner-contacts" value="{{ owner.contact_details }}" class="new-edit-form-element">
+                    <br>
+                    <input id='submit-button' type="submit" value="Save" class="link-button">
+            </form>
+            <br>
+        </section>
+        <nav class="card-nav">
+            <form action="/owners/{{ owner.id }}">
+                <input type="submit" value="Back" class="link-button">
+            </form>
+        </nav>
+    </section>
+</main>
+
+
+
+
+
 
         <section>
             <h1>Edit Owner </h1>
