--- a/templates/animals/animal.html
+++ b/templates/animals/animal.html
@@ -1,26 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<article>
-    <h2>{{ animal.name }}</h2>
-    <h4>DOB:  {{ animal.date_of_birth }}</h4>
-    <h4>type: {{ animal.type }}</h4>
-    <h4>Onwer: {{ animal.owner.name }}</h4> 
-    <h4>Vet: {{ animal.vet.name }}</h4>
-    <h4>Treatment Notes</h4>
-    <p>{{ animal.treatment_notes }}</p>
-
-</article>
-<br>
-<nav>
-    <a href="/animals">Back</a>
-    <a href="/animals/{{ animal.id }}/edit">Edit</a>
-    <br>
-    <form action="/animals/{{ animal.id }}/delete" method="POST">
-        <input type="submit" value="Delete">
-    </form> 
-    </ul>
-
-</nav>
-
+<main>
+    <section class="card">
+        <h1>Animals</h1>
+        <section class="card-content">
+            <h1>{{ animal.name }}</h1>
+            <h3><b>Date of Birth:</b> {{ animal.date_of_birth }}</h3>
+            <h3><b>Type:</b> {{ animal.type }}</h3>
+            <h3><b>Onwer:</b> {{ animal.owner.name }}</h3>
+            <h3><b>Vet:</b> {{ animal.vet.name }}</h3>
+            <h3>Treatment Notes</h3>
+            <p>{{ animal.treatment_notes }}</p>
+        </section>
+        <br>
+        <nav class="card-nav">
+            <form action="/animals/{{animal.id }}/edit">
+                <input type="submit" value="Edit" class="link-button">
+            </form>
+            <form action="/animals/{{ animal.id }}/delete" method="POST">
+                <input type="submit" value="Delete" class="link-button">
+            </form>
+        </nav>
+    </section>
+</main>
 {% endblock %}
