--- a/templates/animals/new.html
+++ b/templates/animals/new.html
@@ -1,37 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-
-        <section>
-            <h1>Add New Animal </h1>
-            <form action="/animals" method="POST" id="new-animals-form">
-                <section class="form-items">
-                    <label for="animals-name">Name</label>
-                    <input type="text" name='name' id="animals-name">
-                    <label for="dob">Date of Birth</label>
-                    <input type="date" name="date-of-birth" id="dob">
-                    <label for="type">Type</label>
-                    <input type="text" name="type" id="animal-type">
-                    <label for="owner">Owner</label>
-                    <select name="owner_id" id="owner">
-                        {% for owner in owners %}
-                        <option value="{{ owner.id }}">{{ owner.name }}</option>
-                        {% endfor %}
-                    </select>
-                    <label for="vet">Vet</label>
-                    <select name="vet_id" id="vet">
-                        {% for vet in vets%}
-                        <option value="{{ vet.id }}">{{ vet.name }}</option>
-                        {% endfor %}
-                    </select>
-                    <label for="notes">Treatment Notes</label>
-                    <textarea name="treatment_notes" id="notes" cols="50" rows="4"></textarea>
-                    <br>
-                    <input id='submit-button' type="submit" value="Add animal">
-                    <br>
-                    <a href="/animals">Back</a>
-                </section>
+<main>
+    <section class="card">
+        <h1>Add new Animal</h1>
+        <section class="card-content">
+            <form action="/animals" method="POST" class="new-edit-form">
+                <label for="animals-name">Name</label>
+                <input type="text" name='name' id="animals-name" class="new-edit-form-element">
+                <label for="dob">Date of Birth</label>
+                <input type="date" name="date-of-birth" id="dob" class="new-edit-form-element">
+                <label for="type">Type</label>
+                <input type="text" name="type" id="animal-type" class="new-edit-form-element">
+                <label for="owner">Owner</label>
+                <select name="owner_id" id="owner" class="new-edit-form-element">
+                    {% for owner in owners %}
+                    <option value="{{ owner.id }}">{{ owner.name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="vet">Vet</label>
+                <select name="vet_id" id="vet" class="new-edit-form-element">
+                    {% for vet in vets%}
+                    <option value="{{ vet.id }}">{{ vet.name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="notes">Treatment Notes</label>
+                <textarea name="treatment_notes" id="notes" cols="50" rows="4"></textarea>
+                <br>
+                <input id='submit-button' type="submit" value="Add animal" class="link-button" style="width: 40%">
             </form>
-            
         </section>
-
+        <br>
+        <nav class="card-nav">
+            <form action="/animals">
+                <input type="submit" value="Back" class="link-button">
+            </form>
+        </nav>
+    </section>
+</main>
 {% endblock %}
