--- a/templates/animals/animal.html
+++ b/templates/animals/animal.html
@@ -7,8 +7,8 @@
             <h1>{{ animal.name }}</h1>
             <h3><b>Date of Birth:</b> {{ animal.date_of_birth }}</h3>
             <h3><b>Type:</b> {{ animal.type }}</h3>
-            <h3><b>Onwer:</b> {{ animal.owner.name }}</h3>
-            <h3><b>Vet:</b> {{ animal.vet.name }}</h3>
+            <h3><b>Onwer:</b> <a href="/owners/{{ animal.owner.id }}">{{ animal.owner.name }}</a></h3>
+            <h3><b>Vet:</b> <a href="/vets/{{ animal.vet.id }}">{{ animal.vet.name }}</a></h3>
             <h3>Treatment Notes</h3>
             <p>{{ animal.treatment_notes }}</p>
         </section>
