--- a/templates/owners/owner.html
+++ b/templates/owners/owner.html
@@ -20,6 +20,9 @@
             <form action="/owners/{{ owner.id }}/delete" method="POST">
                 <input type="submit" value="Delete" class="link-button">
             </form>
+            <form action="/animals/new">
+                <input type="submit" value="New Animal" class="link-button">
+            </form>
         </nav>
     </section>
 </main>
