--- a/templates/vets/vet.html
+++ b/templates/vets/vet.html
@@ -19,6 +19,9 @@
             <form action="/vets/{{ vet.id }}/delete" method="POST">
                 <input type="submit" value="Delete" class="link-button">
             </form>
+            <form action="/animals/new">
+                <input type="submit" value="New Animal" class="link-button">
+            </form>
         </nav>
     </section>
 </main>
