--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -40,7 +40,7 @@ body > header {
 .card {
     width: 40%;
     margin-left: 40px;
-    margin-top: 20px;
+    margin-top: 40px;
     box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
     border-radius: 20px;
     /* border-top-left-radius: 0;
@@ -51,8 +51,6 @@ body > header {
     flex-direction: column;
     padding-bottom: 30px;
     background-color: white;
-
-    
 }
 
 .card > h1 {
@@ -68,6 +66,7 @@ body > header {
 
 .card-content {
     text-align: center;
+    width: 70%;
 }
 
 .card-content > h1 {
