updated models, repos, controllers and HTML to implement a register property of owners, which restricts if they can add or remove animals on the interface

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -64,6 +64,10 @@ body > header {
     font-size: 40px; 
 }
 
+.card > h1 > a:any-link {
+    color: white
+}
+
 .card-content {
     text-align: center;
     width: 70%;
