--- a/templates/animals/animal.html
+++ b/templates/animals/animal.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main>
     <section class="card">
-        <h1>Animals</h1>
+        <h1><a href="/animals">Animals</a></h1>
         <section class="card-content">
             <h1>{{ animal.name }}</h1>
             <h3><b>Date of Birth:</b> {{ animal.date_of_birth }}</h3>
