--- a/templates/vets/vet.html
+++ b/templates/vets/vet.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main>
     <section class="card">
-        <h1>Team of vets</h1>
+        <h1><a href="/vets">Team of vets</a></h1>
         <section class="card-content">
             <h1>{{ vet.name }}</h1>
             <h2>Patients:</h2>
