--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -8,8 +8,12 @@
                 <label for="owner-name"> Name</label>
                 <input type="text" name='name' id="vet-name" value="{{ owner.name }}" class="new-edit-form-element">
                 <label for="owner-contacts">Contact Details</label>
-                <input type="text" name="contact-details" id="owner-contacts" value="{{ owner.contact_details }}"
-                    class="new-edit-form-element">
+                <input type="text" name="contact-details" id="owner-contacts" value="{{ owner.contact_details }}" class="new-edit-form-element">
+                <label for="Registration">Status</label>
+                <select name="registered" class="new-edit-form-element">
+                    <option value="false">Unregistered</option>
+                    <option value="true" {% if owner.registered %} selected {% endif %}>Registered</option>
+                </select>
                 <br>
                 <input id='submit-button' type="submit" value="Save" class="link-button">
             </form>
