appointment_controller: completed the view all appointments fuctionality, create new and view it. Had a huge bug due to the appointment select method using the appointment id for selecting animals.

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
                 <li><a href="/vets">Vets</a></li>
                 <li><a href="/owners">Owners</a></li>
                 <li><a href="/animals">Animals</a></li>
+                <li><a href="/appointments">Appointments</a></li>
             </ul>
         </nav>
     </header>
