--- a/templates/animals/animals.html
+++ b/templates/animals/animals.html
@@ -16,6 +16,9 @@
             <form action="/animals/new" id="add-new-button">
                 <input type="submit" value="Add Animal" class="link-button">
             </form>
+            <form action="/appointments/checked-in">
+                <input type="submit" value="Checked In" class="link-button">
+            </form>
         </nav>
     </section>
 </main>
