--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
     background-image: url('/static/images/dog-bw.jpg');
