completed the check-in/out extensions and added links to the html

--- a/templates/appointments/appointments.html
+++ b/templates/appointments/appointments.html
@@ -16,6 +16,9 @@
             <form action="/appointments/new" id="add-new-button">
                 <input type="submit" value="Add New" class="link-button">
             </form>
+            <form action="/appointments/checked-in">
+                <input type="submit" value="Checked In" class="link-button">
+            </form>
         </nav>
     </section>
 </main>
