--- a/templates/animals/new.html
+++ b/templates/animals/new.html
@@ -6,11 +6,13 @@
         <section class="card-content">
             <form action="/animals" method="POST" class="new-edit-form">
                 <label for="animals-name">Name</label>
-                <input type="text" name='name' id="animals-name" class="new-edit-form-element">
-                <label for="dob">Date of Birth</label>
+                <input type="text" name='name' id="animals-name" class="new-edit-form-element" required>
+                <label for="dob">Date of Birth if known</label>
                 <input type="date" name="date-of-birth" id="dob" class="new-edit-form-element">
+                <label for="age"> OR enter age</label>
+                <input type="number" name="age" id="age" class="new-edit-form-element" style="width: 25%; margin: auto">
                 <label for="type">Type</label>
-                <input type="text" name="type" id="animal-type" class="new-edit-form-element">
+                <input type="text" name="type" id="animal-type" class="new-edit-form-element" required>
                 <label for="owner">Owner</label>
                 <select name="owner_id" id="owner" class="new-edit-form-element" >
                     {% for owner in owners %}
