fixed bug on animal_repo and button value on animal

--- a/templates/animals/animal.html
+++ b/templates/animals/animal.html
@@ -19,7 +19,7 @@
                 <form action="/notes" method="POST">
                     <input value="{{ animal.id }}" name="animal_id" hidden>
                     <input type="text" name="content">
-                    <input type="submit">
+                    <input type="submit" value="Add Note">
                 </form>
             </section>
         </section>
