--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -44,8 +44,6 @@ body > header {
     margin-top: 40px;
     box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) ;
     border-radius: 20px;
-    /* border-top-left-radius: 0;
-    border-top-right-radius: 0; */
     justify-content: left;
     align-items: center;
     display: flex;
@@ -63,6 +61,9 @@ body > header {
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 40px; 
+    border-radius: 20px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .card > h1 > a:any-link {
