--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Vet Management App</h1>
+        <h1><a href="/">Vet Management App</a></h1>
         <nav id="side-nav-bar">
             <ul id="nav-list">
                 <li><a href="/vets">Vets</a></li>
